// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button snapshots collection is Button with Form and onClick props render right? 1`] = `
<div>
  <div>
    <div
      class="input-wrapper"
    >
      <div
        class="input-element-wrapper required"
      >
        <input
          aria-invalid="false"
          aria-required="true"
          class="input-element"
          form="test"
          name="in"
          value=""
        />
      </div>
    </div>
    <button
      class="button-wrapper disabled"
      type="button"
    >
      test
    </button>
  </div>
</div>
`;

exports[`Button snapshots collection is Button with basic props render right? 1`] = `
<div>
  <button
    class="button-wrapper"
    type="button"
  >
    test
  </button>
</div>
`;

exports[`Button snapshots collection is Button with isDisabled attributes render right? 1`] = `
<div>
  <button
    class="button-wrapper disabled"
    type="button"
  >
    test
  </button>
</div>
`;

exports[`Button snapshots collection is Button with with isLoading attributes render right? 1`] = `
<div>
  <button
    class="button-wrapper loading"
    type="button"
  >
    test
  </button>
</div>
`;
